Enforce project like idempotency